<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmd.gasnatural.presentation.activity.DetalleEmpresaInstaladoraActivity">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/linear_seleccionar_instalador"
       android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginRight="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginTop="@dimen/marg_detalleempresainstaladora_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                    android:text="@string/txt_activitydetalleempresa_nombreempresa"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_text_detalle_empresasinstaladoras"
                    android:textColor="@color/blue_background"
                    android:text="Asociados en ingeniera y soluciones tecnologicas SA"
                    android:id="@+id/txt_nombre_empresainstaladora"/>
                <View

                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/height_separator"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginRight="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginTop="@dimen/marg_detalleempresainstaladora_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                    android:text="@string/txt_activitydetalleempresa_nroruc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_text_detalle_empresasinstaladoras"
                    android:textColor="@color/blue_background"
                    android:text="Asociados en ingeniera y soluciones tecnologicas SA"
                    android:id="@+id/txt_nroruc"
                    />
                <View

                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/height_separator"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginRight="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginTop="@dimen/marg_detalleempresainstaladora_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                    android:text="@string/txt_activitydetalleempresa_tipoinstalacion"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_text_detalle_empresasinstaladoras"
                    android:textColor="@color/blue_background"
                    android:text="Asociados en ingeniera y soluciones tecnologicas SA"
                    android:id="@+id/txt_tipoinstalacion"/>
                <View

                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/height_separator"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginRight="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginTop="@dimen/marg_detalleempresainstaladora_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                    android:text="@string/txt_activitydetalleempresa_direccion"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_text_detalle_empresasinstaladoras"
                    android:textColor="@color/blue_background"
                    android:id="@+id/txt_direccion_activitydetalle"
                    android:text="Asociados en ingeniera y soluciones tecnologicas SA"/>
                <View

                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/height_separator"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginRight="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginTop="@dimen/marg_detalleempresainstaladora_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                    android:text="@string/txt_activitydetalleempresa_telefono"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_text_detalle_empresasinstaladoras"
                        android:textColor="@color/blue_background"
                        android:id="@+id/txt_telefono_activitydetalle"
                        android:text="01255643"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:src="@mipmap/icon_telefono"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/height_separator"/>
            </LinearLayout>
            <!--Correo electronico-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginRight="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginTop="@dimen/marg_detalleempresainstaladora_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                    android:text="@string/txt_activitydetalleempresa_correo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_text_detalle_empresasinstaladoras"
                        android:textColor="@color/blue_background"
                        android:text="user@gmd.com.pe"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:src="@mipmap/icon_correo"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/height_separator"/>
            </LinearLayout>
            <!--Sitio web-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginRight="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginTop="@dimen/marg_detalleempresainstaladora_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                    android:text="@string/txt_activitydetalleempresa_sitioweb"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_text_detalle_empresasinstaladoras"
                        android:textColor="@color/blue_background"
                        android:text="www.gmd.com.pe"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:src="@mipmap/icon_sitioweb"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/height_separator"/>
            </LinearLayout>
            <!--fin sitio web-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginRight="@dimen/marg_detalleempresainstaladora_rightleft"
                android:layout_marginTop="@dimen/marg_detalleempresainstaladora_top"
                android:layout_marginBottom="@dimen/marg_detalleempresainstaladora_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_titulodetalle_bottom"
                    android:text="@string/txt_activitydetalleempresa_servicios"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_text_detalle_empresasinstaladoras"
                    android:textColor="@color/blue_background"
                    android:text="Asociados en ingeniera y soluciones tecnologicas SA"/>
            </LinearLayout>
        </LinearLayout>
   </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padd_layout_verificar"
        android:paddingBottom="@dimen/padd_layout_verificar"
        android:layout_alignParentBottom="true"
        android:id="@+id/linear_seleccionar_instalador"
        android:clickable="true"
        android:background="@drawable/selector_button_verificar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_btn_verificar"
            android:text="@string/btn_seleccionar_instalador"/>
    </LinearLayout>

</RelativeLayout>
